# docs/swagger.json
@@ -40,6 +40,35 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "add user to database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Create an user",
+                "parameters": [
+                    {
+                        "description": "Add user",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.createPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                }
             }
         },
         "/users/{id}": {
@@ -74,6 +103,29 @@
         }
     },
     "definitions": {
+        "handlers.createPayload": {
+            "type": "object",
+            "required": [
+                "birthdate",
+                "cpf",
+                "email",
+                "name"
+            ],
+            "properties": {
+                "birthdate": {
+                    "type": "string"
+                },
+                "cpf": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
